# nibli

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  DOCS_TODO.md  GUARANTEES.md  Justfile  KLARO_TODO.md  KR_TODO.md  LICENSE-APACHE  LICENSE-MIT  LOGIC_IR.md  LOJBAN_COVERAGE.md  NIBLI_KR.md  NOTICE  README.md  SURFACE_SYNTAX.md  TODO.md  code-review-panel-2026-06-10.json  determinism-corpus.klaro  determinism-corpus.lojban  determinism-corpus.nibli  difft.patch  drug-interactions.lojban  drug-interactions.nibli  flake.nix  gdpr.lojban  gdpr.nibli  mutants-baseline.txt  readme.lojban  readme.nibli  run_utopia.nibli  run_utopia_domestic.nibli  tmp.md  tmp.txt  todo.md  triad-trace-improvement.md  utopia.nibli
.cargo/: mutants.toml
.claude/: launch.json  settings.local.json
docs/: claude-input.md  deep-research-transparency-triad-ui.md  gemini-input.md  the-tranparancy-triad.md  transparency-triad-implementation-plan.md  transparency-triad-review-notes.md
fanva/: PROMPT.md
fanva-proxy/: .dev.vars.example  DEPLOY.md  README.md  package-lock.json  package.json  wrangler.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_assert.rs  fuzz_klaro.rs  fuzz_nibli_kr.rs  fuzz_parse.rs  fuzz_query.rs
gasnu/: Cargo.toml
gasnu/src/: main.rs
gerna/: Cargo.toml
gerna/src/: ast.rs  bindings.rs  flattener_tests.rs  goi.rs  grammar.rs  grammar_tests.rs  integration_tests.rs  lexer.rs  lib.rs  pipeline_tests.rs  preprocessor.rs
gerna/src/grammar/: selbri.rs  sentence.rs  sumti.rs
gerna/tests/: integration.rs
grammars/: README.md  nibli-markdown-injection.json  nibli.tmLanguage.json
ideas/: crdt-egraph-architecture.lojban
klaro/: Cargo.toml
klaro-dictionary/: Cargo.toml  build.rs
klaro-dictionary/src/: curated.rs  lib.rs  reserved.rs
klaro/src/: ast.rs  emit.rs  klaro.pest  lexer.rs  lib.rs  lint.rs  parser.rs  render.rs  resolve.rs  token.rs
klaro/tests/: acceptance.klaro
lasna/: Cargo.toml
lasna/src/: lib.rs
logji/: Cargo.toml
logji/src/: bindings.rs  compute.rs  fact_store.rs  kb.rs  lib.rs  reasoning.rs  repr.rs  rules.rs  smuni_bridge.rs  tests.rs  wasi_fact_store.rs
logji/tests/: known_failures_fol.rs
mdbook/: book.toml
nibli/: Cargo.toml
nibli-agent/: Cargo.toml
nibli-agent/src/: main.rs
nibli-auth/: Cargo.toml
nibli-auth-py/: Cargo.toml  pyproject.toml
nibli-auth-py/src/: lib.rs
nibli-auth/policy/: auth-0.1.0.nibli
nibli-auth/src/: async_graphql_ext.rs  axum_ext.rs  cache.rs  decision.rs  juniper_ext.rs  kr.rs  lib.rs  tls.rs
nibli-auth/tests/: auth_core.rs
nibli-engine/: Cargo.toml
nibli-engine/benches/: engine_bench.rs
nibli-engine/src/: compute_client.rs  lib.rs
nibli-engine/tests/: integration.rs  known_failures.rs  known_failures_fatal.rs  verdict_corpus.rs
nibli-fanva/: Cargo.toml  README.md  TODO.md
nibli-fanva/src/: agent.rs  gates.rs  lib.rs  tools.rs  verify.rs
nibli-fanva/src/llm/: http.rs  mod.rs  request.rs  response.rs  system_prompt.rs  types.rs
nibli-fanva/src/mcp/: mod.rs  types.rs  wire.rs
nibli-formalize/: Cargo.toml  README.md  TODO.md
nibli-formalize/src/: agent.rs  gates.rs  lib.rs  verify.rs
nibli-formalize/src/llm/: http.rs  mod.rs  request.rs  response.rs  system_prompt.rs
nibli-host/: Cargo.toml
nibli-host/src/: kr_highlighter.rs  main.rs
nibli-import/: Cargo.toml
nibli-kr/: Cargo.toml
nibli-kr/src/: ast.rs  complete.rs  complete_reedline.rs  emit.rs  highlight.rs  lib.rs  lint.rs  nibli_kr.pest  parser.rs  render.rs  resolve.rs  shape_tests.rs
nibli-kr/src/shape_tests/: abstractions.rs  events.rs  injection.rs  lowering.rs  mutation_audit.rs  quantifiers.rs  regressions.rs  rel_clauses.rs  scoping.rs  terms.rs  wrappers.rs
nibli-kr/tests/: acceptance.nibli
nibli-pipeline/: Cargo.toml
nibli-pipeline/src/: lib.rs
nibli-protocol/: Cargo.toml
nibli-protocol/src/: compute_client.rs  lib.rs
nibli-reason/: Cargo.toml
nibli-reason/src/: compute.rs  fact_store.rs  kb.rs  lib.rs  reasoning.rs  rules.rs  tests.rs
nibli-reason/src/tests/: assertions.rs  compute_ingest.rs  conditionals_deontic.rs  descriptions_events.rs  disjunctive.rs  existential.rs  find_aggregates.rs  flat_vs_surface.rs  memo_regressions.rs  numeric_compute.rs  provenance.rs  retraction_negation.rs  rules_edges.rs  skolem.rs  strict.rs  tense.rs  traces.rs  unify_equality.rs  witnesses.rs  zoo.rs
nibli-reason/tests/: known_failures_fol.rs
nibli-render/: Cargo.toml
nibli-render/src/: collapse.rs  corpus_overlay.rs  fact.rs  frame.rs  lib.rs  logic.rs  overlay.rs  proof.rs  register.rs  summary.rs  term.rs
nibli-semantics/: Cargo.toml
nibli-semantics/src/: dictionary.rs  ir.rs  lib.rs  semantic.rs
nibli-semantics/src/semantic/: compile.rs  helpers.rs  predicate.rs  selbri.rs  tests.rs
nibli-semantics/src/semantic/tests/: abstractions.rs  events.rs  injection.rs  lowering.rs  modals.rs  quantifiers.rs  regressions.rs  rel_clauses.rs  scoping.rs  terms_misc.rs  wrappers.rs
nibli-server/: Cargo.toml
nibli-server/src/: main.rs
nibli-session/: Cargo.toml
nibli-session/src/: lib.rs
nibli-ui/: Cargo.toml
nibli-ui/assets/: style.css  tokens.css
nibli-ui/src/: examples.rs  llm.rs  main.rs
nibli-verify/: Cargo.toml
nibli-verify/src/: asp.rs  corpora.rs  corpus.rs  corpus_naf.rs  filter.rs  generator.rs  klaro_battery.rs  kr_seam.rs  lib.rs  main.rs  nibli_kr_battery.rs  nibli_kr_seam.rs  oracle.rs  oracle_asp.rs  parser_diff.rs  predilex.rs  retract_diff.rs  seam.rs  strat_diff.rs  tense.rs  tptp.rs
nibli-verify/tests/: alias_differential.rs  differential_gate.rs  klaro_gate.rs  klaro_twins.rs  kr_seam_gate.rs  nibli_kr_seam_gate.rs  parser_differential.rs  predilex_differential.rs
nibli-wasm/: Cargo.toml
nibli-wasm/src/: lib.rs
nibli-wasm/tests/: determinism.rs
nibli/src/: kr_highlighter.rs  main.rs
parser/: Cargo.toml
parser/src/: ast.rs  bindings.rs  grammar.rs  lexer.rs  lib.rs  lojban.pest  preprocessor.rs
parser/tests/: integration.rs
proofs/: README.md  (+6 more)
reasoning/: Cargo.toml
reasoning/src/: bindings.rs  lib.rs  reasoning.rs
(+118 files in other folders)
