[workspace]
members = [
    "smuni",
    "logji",
    "gasnu",
    "lasna",
    "nibli",
    "nibli-ui",
    "nibli-fanva",
    "nibli-engine",
    "nibli-protocol",
    "smuni-dictionary",
    "nibli-kr-dictionary",
    "nibli-kr",
    "nibli-store",
    "nibli-types",
    "nibli-import",
    "nibli-wasm",
    "nibli-render",
    "nibli-verify",
]
exclude = ["fuzz"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
