[workspace]
members = [
    "nibli-semantics",
    "nibli-reason",
    "nibli-host",
    "nibli-pipeline",
    "nibli",
    "nibli-ui",
    "nibli-formalize",
    "nibli-engine",
    "nibli-protocol",
    "nibli-lexicon",
    "tools/lexigen",
    "nibli-kr",
    "nibli-session",
    "nibli-store",
    "nibli-types",
    "nibli-import",
    "nibli-wasm",
    "nibli-render",
    "nibli-verify",
    "nibli-auth",
    "examples/auth-axum",
]
exclude = ["fuzz"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
