[package]
name = "nibli-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nibli-engine = { path = "../nibli-engine" }
# fuzz_klaro: klaro parse -> smuni compile, asserting the emitted AstBuffer is
# never structurally corrupt (klaro links neither crate at runtime, so both are
# direct deps here).
klaro = { path = "../klaro" }
smuni = { path = "../smuni" }

# Prevent debug info from slowing fuzzer
[profile.release]
debug = 1

[[bin]]
name = "fuzz_assert"
path = "fuzz_targets/fuzz_assert.rs"
doc = false

[[bin]]
name = "fuzz_query"
path = "fuzz_targets/fuzz_query.rs"
doc = false

[[bin]]
name = "fuzz_klaro"
path = "fuzz_targets/fuzz_klaro.rs"
doc = false
