[package]
name = "gerna"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3"
logos = "0.16.1"
wit-bindgen-rt = "0.44.0"

[package.metadata.component]
package = "lojban:nibli"

[package.metadata.component.target]
path = "../wit/world.wit"
world = "gerna-component"

[lib]
crate-type = ["lib"]
