[package]
name = "klaro"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2"
pest_derive = "2"

[dev-dependencies]
# Keyword conformance: the grammar's kw_* rules are pinned against
# klaro-dictionary's single-source RESERVED_WORDS by an exhaustive unit test.
klaro-dictionary = { path = "../klaro-dictionary" }
