[package]
name = "lasna"
description = "Pipeline orchestrator — chains gerna, smuni, logji into a single WASM component"
version = "0.1.0"
edition = "2024"

[dependencies]
gerna = { path = "../gerna" }
# The Klaro front-end (language dispatch in compile_pipeline). Grows the
# component by pest + klaro-dictionary — the cost of the dual-front-end phase.
klaro = { path = "../klaro" }
smuni = { path = "../smuni" }
logji = { path = "../logji" }
nibli-types = { path = "../nibli-types" }
wit-bindgen-rt = "0.44.0"

[package.metadata.component]
package = "lojban:nibli"

[package.metadata.component.target]
path = "../wit/world.wit"
world = "lasna-pipeline"

[lib]
crate-type = ["cdylib", "lib"]
