[package]
name = "logji"
description = "Reasoning engine — backward-chaining inference over typed fact store"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-types = { path = "../nibli-types" }
serde = { version = "1", features = ["derive"], optional = true }
smuni-dictionary = { path = "../smuni-dictionary" }

[features]
default = []
serde = ["dep:serde"]

# Test-only: the real klaro→smuni front-end, so unit tests can build a `LogicBuffer`
# the SHIPPED way (event-decomposed) and check the flat helpers against it. No cycle —
# klaro→smuni→logji is a DAG; dev-deps never touch the WASM/release build.
[dev-dependencies]
klaro = { path = "../klaro" }
smuni = { path = "../smuni" }

[lib]
crate-type = ["lib"]
