[package]
name = "nibli-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nibli-agent"
path = "src/main.rs"

[dependencies]
tavla = { path = "../tavla" }
nibli-engine = { path = "../nibli-engine" }
rig-core = "0.33"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
