[package]
name = "nibli-engine"
description = "Native engine wrapper library (shared by nibli-server and tavla)"
version = "0.1.0"
edition = "2024"

[dependencies]
gerna = { path = "../gerna" }
smuni = { path = "../smuni" }
logji = { path = "../logji" }
nibli-types = { path = "../nibli-types", features = ["serde"] }
nibli-protocol = { path = "../nibli-protocol" }
nibli-render = { path = "../nibli-render" }
nibli-store = { path = "../nibli-store" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "engine_bench"
description = "Native engine wrapper library (shared by nibli-server and tavla)"
harness = false
