[package]
name = "nibli-engine"
description = "Native engine wrapper library (in-process embedding of the nibli pipeline)"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-reason = { path = "../nibli-reason" }
nibli-types = { path = "../nibli-types", features = ["serde"] }
nibli-protocol = { path = "../nibli-protocol", features = ["compute-client"] }
nibli-render = { path = "../nibli-render" }
nibli-store = { path = "../nibli-store" }
postcard = { version = "1", features = ["alloc"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
nibli-render = { path = "../nibli-render" }
nibli-protocol = { path = "../nibli-protocol", features = ["compute-client"] }

[[bench]]
name = "engine_bench"
description = "Native engine wrapper library (in-process embedding of the nibli pipeline)"
harness = false
