[package]
name = "nibli-formalize"
version = "0.1.0"
edition = "2024"
description = "Agentic English-to-KR formalizer: LLM + validation gates + self-correction loop"

# Pure-logic engine consumed by nibli-ui. The nibli-kr/smuni gates and the
# agent/provider logic build + unit-test on the NATIVE target with mocked
# chat()/MCP; the gloo-net HTTP client and the camxes.js JS-interop gate
# (Lojban-only) are wasm-only. No Dioxus here — the UI shell is nibli-ui's job.

[dependencies]
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-render = { path = "../nibli-render" }
nibli-types = { path = "../nibli-types" }
# The shipped alias map (ALIASES) — the LLM system prompt grounds on it so the
# model uses valid predicate names. Transitive via nibli-kr, but named directly
# to reach the public statics.
nibli-lexicon = { path = "../nibli-lexicon" }
serde_json = "1"

[dev-dependencies]
# A minimal block_on for driving the async agent loop in native unit tests.
futures = { version = "0.3", features = ["executor"] }

# Browser fetch — compiled ONLY for the wasm target (the concrete `Chat` transport).
# Native builds/tests skip it and use a mock `Chat`, so the pure logic stays offline-testable.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
# camxes "official" gate: call the browser's window.camxes_validate synchronously.
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
