[package]
name = "nibli-kr"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2"
pest_derive = "2"
# resolve.rs: the alias map (name -> gismu + swap + place labels) and the
# identity-gismu passthrough arity source, both from nibli-lexicon. The grammar's
# kw_* rules are pinned against its single-source RESERVED_WORDS by an exhaustive
# unit test.
nibli-lexicon = { path = "../nibli-lexicon" }
# emit.rs targets nibli-types' AstBuffer; parse_checked returns NibliError.
nibli-types = { path = "../nibli-types" }

[dev-dependencies]
# Golden tests: every emitted buffer must be accepted by smuni, and nibli KR
# statements must compile to LogicBuffers EQUAL to their Lojban twins'
# (the in-crate preview of the nibli-verify translation battery).
nibli-semantics = { path = "../nibli-semantics" }
