[package]
name = "nibli-pipeline"
description = "Pipeline orchestrator — chains nibli-kr, smuni, logji into a single WASM component"
version = "0.1.0"
edition = "2024"

[dependencies]
# The nibli KR front-end (compile_pipeline's text→AST seam). Grows the
# component by pest + the nibli-lexicon alias map.
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-reason = { path = "../nibli-reason" }
nibli-session = { path = "../nibli-session" }
nibli-types = { path = "../nibli-types" }
wit-bindgen-rt = "0.44.0"

[package.metadata.component]
package = "nibli:engine"

[package.metadata.component.target]
path = "../wit/world.wit"
world = "nibli-pipeline"

# Remap the ABI-matching boundary types onto the canonical `nibli_types` enums
# instead of generating distinct mirror types — this deletes the hand-written
# 1:1 converters in lib.rs (the generated shapes match these types exactly:
# tuple-variant ↔ tuple-variant, record ↔ struct). `proof-rule`/`proof-step`/
# `proof-trace` are deliberately NOT remapped — `proof-rule` is named-field in
# Rust but wit-bindgen can only emit tuple/newtype variants, so it keeps a
# converter (and the trio references it).
[package.metadata.component.bindings.with]
"nibli:engine/logic-types@0.4.0/logical-term" = "nibli_types::logic::LogicalTerm"
"nibli:engine/logic-types@0.4.0/logic-node" = "nibli_types::logic::LogicNode"
"nibli:engine/logic-types@0.4.0/logic-buffer" = "nibli_types::logic::LogicBuffer"
"nibli:engine/logic-types@0.4.0/query-result" = "nibli_types::logic::QueryResult"
"nibli:engine/logic-types@0.4.0/unknown-reason" = "nibli_types::logic::UnknownReason"
"nibli:engine/logic-types@0.4.0/resource-kind" = "nibli_types::logic::ResourceKind"
"nibli:engine/logic-types@0.4.0/witness-binding" = "nibli_types::logic::WitnessBinding"
"nibli:engine/logic-types@0.4.0/fact-summary" = "nibli_types::logic::FactSummary"
"nibli:engine/error-types@0.4.0/nibli-error" = "nibli_types::error::NibliError"
"nibli:engine/error-types@0.4.0/syntax-detail" = "nibli_types::error::SyntaxDetail"

[lib]
name = "nibli"
crate-type = ["cdylib", "lib"]
