[package]
name = "nibli-reason"
description = "Reasoning engine — backward-chaining inference over typed fact store"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-types = { path = "../nibli-types" }
serde = { version = "1", features = ["derive"], optional = true }
nibli-lexicon = { path = "../nibli-lexicon" }

[features]
default = []
serde = ["dep:serde"]

# Test-only: the real nibli-kr→smuni front-end, so unit tests can build a `LogicBuffer`
# the SHIPPED way (event-decomposed) and check the flat helpers against it. No cycle —
# nibli-kr→smuni→logji is a DAG; dev-deps never touch the WASM/release build.
[dev-dependencies]
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }

[lib]
crate-type = ["lib"]
