[package]
name = "nibli-render"
version = "0.1.0"
edition = "2024"
description = "Shared human-readable rendering for the Transparency Triad back-translation and proof traces"

[dependencies]
nibli-types = { path = "../nibli-types" }
nibli-protocol = { path = "../nibli-protocol" }
smuni-dictionary = { path = "../smuni-dictionary" }
