[package]
name = "nibli-semantics"
description = "Semantic compiler — Lojban AST to First-Order Logic IR"
version = "0.1.0"
edition = "2024"

[dependencies]
lasso = "0.7.3"
nibli-types = { path = "../nibli-types" }
# Single source of predicate arities (also drives back-translation + logji's
# SignatureSource). smuni delegates instead of generating a parallel arity map.
nibli-lexicon = { path = "../nibli-lexicon" }

[lib]
crate-type = ["lib"]
