[package]
name = "nibli-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-engine = { path = "../nibli-engine" }
nibli-protocol = { path = "../nibli-protocol" }
tavla = { path = "../tavla" }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
