[package]
name = "nibli-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-engine = { path = "../nibli-engine" }
nibli-protocol = { path = "../nibli-protocol" }
tavla = { path = "../tavla" }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
