[package]
name = "nibli-ui"
description = "Dioxus web UI for the Transparency Triad"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
gloo-net = { version = "0.6", features = ["http"] }
nibli-protocol = { path = "../nibli-protocol" }
nibli-render = { path = "../nibli-render" }
nibli-types = { path = "../nibli-types" }
gerna = { path = "../gerna" }
klaro = { path = "../klaro" }
smuni = { path = "../smuni" }
logji = { path = "../logji" }
smuni-dictionary = { path = "../smuni-dictionary" }
nibli-fanva = { path = "../nibli-fanva" }
serde_json = "1"

[dev-dependencies]
# Full-vs-fallback dictionary-mode detection for the shipped-examples guard test.
klaro-dictionary = { path = "../klaro-dictionary" }
