[package]
name = "nibli-ui"
description = "Dioxus web UI for the Transparency Triad"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
gloo-net = { version = "0.6", features = ["http"] }
nibli-protocol = { path = "../nibli-protocol" }
nibli-render = { path = "../nibli-render" }
nibli-types = { path = "../nibli-types" }
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-reason = { path = "../nibli-reason" }
nibli-session = { path = "../nibli-session" }
nibli-lexicon = { path = "../nibli-lexicon" }
nibli-formalize = { path = "../nibli-formalize" }
serde_json = "1"
# The shipped-examples guard test detects full-vs-fallback build mode via
# nibli-lexicon's DICTIONARY (a regular dep above), so no extra dev-dep is needed.
