[package]
name = "nibli-verify"
description = "Differential soundness gate: check nibli's verdict against Vampire (classical FOL, Horn/NAF-free) and clingo (ASP, stratified-NAF + closed-world)"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-engine = { path = "../nibli-engine" }
nibli-types = { path = "../nibli-types" }
# The KR front-end + nibli-semantics/logji so nibli_kr_battery::kompile() runs the shipped
# post-parse stages (compute-node marking included).
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-reason = { path = "../nibli-reason" }

[dev-dependencies]
# The Predilex arity gate (tests/predilex_differential.rs) joins the vendored
# Predilex expectations against the SHIPPED dictionary arities. Dev-only so the
# library's data layer (src/predilex.rs) stays a pure parser.
nibli-lexicon = { path = "../nibli-lexicon" }
# The alias-map differential gate (tests/alias_differential.rs) joins the
# SHIPPED nibli-kr alias map against the SHIPPED smuni dictionary — the two
# independently built phf maps cannot drift.
nibli-kr-dictionary = { path = "../nibli-kr-dictionary" }

[[bin]]
name = "nibli-verify"
path = "src/main.rs"

[lib]
name = "nibli_verify"
path = "src/lib.rs"
