[package]
name = "nibli-verify"
description = "Differential soundness gate: check nibli's verdict against Vampire (classical FOL, Horn/NAF-free) and clingo (ASP, stratified-NAF + closed-world)"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-engine = { path = "../nibli-engine" }
nibli-types = { path = "../nibli-types" }
# The KR front-end + nibli-semantics/logji so nibli_kr_battery::kompile() runs the shipped
# post-parse stages (compute-node marking included).
nibli-kr = { path = "../nibli-kr" }
nibli-semantics = { path = "../nibli-semantics" }
nibli-reason = { path = "../nibli-reason" }
nibli-session = { path = "../nibli-session" }
# The Predilex gates key their Lojban lemmas through the provenance bridge
# (nibli_lexicon::by_provenance) — a regular dep since the taxonomy leg
# (src/lib.rs::run_predilex_taxonomy) re-keys edges to English corpus names;
# the corpus/alias differential tests use the same crate.
nibli-lexicon = { path = "../nibli-lexicon" }

[dev-dependencies]

[[bin]]
name = "nibli-verify"
path = "src/main.rs"

[lib]
name = "nibli_verify"
path = "src/lib.rs"
