[package]
name = "nibli"
description = "Native debug REPL and validation tooling"
version = "0.1.0"
edition = "2024"

[dependencies]
nibli-engine = { path = "../nibli-engine" }
nibli-import = { path = "../nibli-import" }
nibli-render = { path = "../nibli-render" }
reedline = "0.45.0"

[[bin]]
name = "nibli"
description = "Native debug REPL and validation tooling"
path = "src/main.rs"

[[bin]]
name = "nibli-validate"
description = "Native debug REPL and validation tooling"
path = "src/bin/validate.rs"

[[bin]]
name = "nibli-import"
description = "RDF Turtle / OWL import CLI"
path = "src/bin/import.rs"
