[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
wit-bindgen-rt = "0.44.0"

[package.metadata.component]
package = "lojban:nesy"

[package.metadata.component.target]
path = "../wit/world.wit"
world = "parser-component"

[lib]
crate-type = ["cdylib", "lib"]
